--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # ===== Backend (FastAPI) =====
   - type: web
     name: pet-med-ai-backend
     env: python
@@ -11,14 +12,14 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.9
 
-  - type: static_site
+  # ===== Frontend (React) =====
+  - type: web
     name: pet-med-ai-frontend
+    env: node
+    plan: starter
     buildCommand: cd frontend && npm ci && npm run build
-    staticPublishPath: frontend/build
+    startCommand: npx serve -s frontend/build -l $PORT
+    autoDeploy: true
     envVars:
       - key: NODE_VERSION
         value: 20
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
