--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: NODE_VERSION
         value: 20
       # 配置后端 API 地址（等后端部署好，把 URL 填进去）
-      # - key: VITE_API_BASE = https://pet-med-ai-backend.onrender.com
+      # - key: VITE_API_BASE 
 
       #   value: https://pet-med-ai-backend.onrender.com
     routes:
