--- a/render.yaml
+++ b/render.yaml
@@ -24,10 +24,8 @@ services:
     envVars:
       - key: NODE_VERSION
         value: 20
-      # 配置后端 API 地址（等后端部署好，把 URL 填进去）
-      # - key: VITE_API_BASE 
-
-      #   value: https://pet-med-ai-backend.onrender.com
+      - key: VITE_API_BASE
+        value: https://pet-med-ai-backend.onrender.com
     routes:
       - type: rewrite
         source: /*
