--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   # ===== Backend (FastAPI) =====
   - type: web
+    runtime: python          # <= 推荐写法；等价于 env: python
     name: pet-med-ai-backend
-    env: python
     plan: starter
     rootDir: backend
     buildCommand: pip install -r requirements.txt
@@ -13,13 +13,14 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.9
 
-  # ===== Frontend (React / Static) =====
-  - type: static_site
+  # ===== Frontend (React / Static Site) =====
+  - type: web
+    runtime: static          # <= 关键！静态站点用 runtime: static
     name: pet-med-ai-frontend
     plan: starter
     rootDir: frontend
     buildCommand: npm install && npm run build
-    staticPublishPath: dist
+    staticPublishPath: dist  # 要与 Vite 的 outDir 一致
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
