--- a/render.yaml
+++ b/render.yaml
@@ -13,21 +13,17 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.9
 
-  # ===== Frontend (React / Static Site) =====
+  # ===== Frontend (React as Node Web) =====
   - type: web
-    name: pet-med-ai-frontend
-    env: static              # <= 关键点：用 env: static
+    name: pet-med-ai-frontend-v2   # ← 换一个新名字，避免“类型不可变”冲突
+    env: node
     plan: starter
     rootDir: frontend
     buildCommand: npm install && npm run build
-    staticPublishPath: dist
+    startCommand: npx serve -s dist -l $PORT   # ← -s 处理 SPA 重写
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
         value: 20
       - key: VITE_API_BASE
         value: https://pet-med-ai-backend.onrender.com
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
