--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,4 @@
 services:
-  # ===== Backend (FastAPI) =====
   - type: web
     name: pet-med-ai-backend
     env: python
@@ -13,18 +12,16 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.9
 
-  # ===== Frontend (React as Node Web) =====
-    - type: web
+  - type: web
     name: pet-med-ai-frontend-v2
     env: node
     plan: starter
     rootDir: frontend
     buildCommand: npm install && npm run build
-    startCommand: npm run start         # ← 用脚本启动，而不是 npx
+    startCommand: npm run start
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
-        value: 20
+        value: "20"
       - key: VITE_API_BASE
         value: https://pet-med-ai-backend.onrender.com
-
