--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     rootDir: backend
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /docs
+    healthCheckPath: /healthz        # ← 改成这个
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
