--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     rootDir: backend
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /healthz        # ← 改成这个
+    healthCheckPath: /healthz
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
@@ -16,9 +16,9 @@ services:
     name: pet-med-ai-frontend-v2
     env: node
     plan: starter
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    startCommand: npm run start
+    rootDir: .
+    buildCommand: npm --prefix frontend install && npm --prefix frontend run build
+    startCommand: npx serve -s frontend/dist -l $PORT
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
