--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "serve": "14.2.1",
+    "axios": "^1.6.8"          // ← 新增
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
