--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,10 @@
     "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "serve": "14.2.1",
-    "axios": "^1.6.8"          // ← 新增
+    "serve": "14.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
