--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,5 @@ SQLAlchemy>=2.0
 psycopg2-binary      # 连接 Render Postgres（若本地用SQLite可不装）
 passlib[bcrypt]      # 密码哈希
 python-multipart     # 以后支持表单/上传用
+alembic
 
