--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: starter
     rootDir: backend
     buildCommand: pip install -r requirements.txt
-    startCommand: alembic -c backend/alembic.ini upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: alembic -c alembic.ini upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT
 
     healthCheckPath: /healthz
     autoDeploy: true
