--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,3 +19,10 @@
     "vite": "^5.4.0"
   }
 }
+{
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
+  }
+}
