--- a/render.yaml
+++ b/render.yaml
@@ -26,8 +26,9 @@ services:
     plan: starter
     rootDir: .
     buildCommand: |
-      npm --prefix frontend install --include=dev
-      npm --prefix frontend run build
+     npm --prefix frontend ci
+     npm --prefix frontend run build
+
     startCommand: npx serve -s frontend/dist -l $PORT
     autoDeploy: true
     envVars:
