--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,7 @@
 [alembic]
 script_location = backend/alembic
-sqlalchemy.url = %(DATABASE_URL)s
+# sqlalchemy.url = driver://user:pass@localhost/dbname
+
 
 [loggers]
 keys = root,sqlalchemy,alembic
