--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,7 +1,9 @@
 [alembic]
-script_location = backend/alembic
-# sqlalchemy.url = driver://user:pass@localhost/dbname
-
+# 这里一定用相对于“当前工作目录”的路径。
+# 你是在 backend/ 目录下执行 alembic，因此应当是 "alembic"；不要写 "backend/alembic"。
+script_location = alembic
+# 让 env.py 负责连接串的获取：优先 DATABASE_URL，其次 db.engine.url
+# sqlalchemy.url =
 
 [loggers]
 keys = root,sqlalchemy,alembic
