--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,8 +1,6 @@
+cat > alembic.ini <<'INI'
 [alembic]
-# 这里一定用相对于“当前工作目录”的路径。
-# 你是在 backend/ 目录下执行 alembic，因此应当是 "alembic"；不要写 "backend/alembic"。
 script_location = alembic
-# 让 env.py 负责连接串的获取：优先 DATABASE_URL，其次 db.engine.url
 # sqlalchemy.url =
 
 [loggers]
@@ -36,3 +34,4 @@ formatter = generic
 
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
+INI
