--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,75 @@
-# node / vite
+# ----------------------------------------
+# Node / Vite
+# ----------------------------------------
 node_modules/
 dist/
 frontend/node_modules/
 frontend/dist/
 
-# python
+# 打包日志
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# 环境文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ----------------------------------------
+# Python
+# ----------------------------------------
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+
+# 虚拟环境
 .venv/
 venv/
-.env
+ENV/
 
-# db (本地)
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# 本地数据库
 backend/app.db
 
-# tooling
+# pytest 缓存
+.pytest_cache/
+
+# mypy 类型检查
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# pyright
+pyrightconfig.json
+
+# coverage 测试
+.coverage
+htmlcov/
+coverage.xml
+
+# ----------------------------------------
+# IDE / Editor
+# ----------------------------------------
+# VS Code
+.vscode/
+.vscode/*
+
+# JetBrains (PyCharm / WebStorm)
+.idea/
+*.iml
+
+# Sublime
+*.sublime-workspace
+*.sublime-project
+
+# ----------------------------------------
+# System / OS
+# ----------------------------------------
 .DS_Store
+Thumbs.db
