--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # === Backend: FastAPI ===
   - type: web
     name: pet-med-ai-backend
     env: python
@@ -8,28 +9,32 @@ services:
       pip install -U pip wheel
       pip install -r requirements.txt
     startCommand: |
-      alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /
+      uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /healthz
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.9"
-      # 数据库连接串建议在控制台或环境组里配置，不直接写在 yaml：
+      - key: KB_ROOT
+        value: /app/knowledge-base
+      # 如有数据库再在控制台设置：
       # - key: DATABASE_URL
       #   sync: false
 
+  # === Frontend: Vite/React (Node serve 静态文件) ===
   - type: web
     name: pet-med-ai-frontend-v6
     env: node
     plan: starter
-    rootDir: frontend           # ← 改为 frontend 子目录
+    rootDir: frontend
     buildCommand: |
-      npm ci                    # ← 在 frontend 下执行
+      npm ci
       npm run build
     startCommand: npx serve -s dist -l $PORT
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
         value: "20"
+      # 部署完成后，把它改成后端实际域名（Render 后端上线后可在控制台复制）
       - key: VITE_API_BASE
         value: https://pet-med-ai-backend.onrender.com
